--- a/style.css
+++ b/style.css
@@ -67,8 +67,13 @@ body{
 	margin: 10px; auto;
 	text-align: center;
 }
-.strike{
+.strike-red{
 	background-color: red;
+	text-decoration: line-through;
+}
+.strike-blue{
+	background-color: #1a237e;
+	color:white;
 	text-decoration: line-through;
 }
 #new-game{
